@@ -19,7 +19,7 @@ name: Catmandu-AlephX
 provides:
   Catmandu::AlephX:
     file: lib/Catmandu/AlephX.pm
-    version: 1.064
+    version: 1.065
   Catmandu::AlephX::Metadata:
     file: lib/Catmandu/AlephX/Metadata.pm
   Catmandu::AlephX::Metadata::MARC:
@@ -104,4 +104,4 @@ requires:
   perl: v5.10.0
 resources:
   license: http://dev.perl.org/licenses/
-version: 1.064
+version: 1.065
